# full-class-2025

10mart/mnogopotochnost/: CMakeLists.txt  main.cpp  mutex.cpp  new.cpp
11apr/2_2_gr/: main.cpp  plusminus.cpp
11apr/graphic2/: graphic2.pro  main.cpp  sec.cpp  third.cpp
11apr/people/: people.pro
11aprr/2_2_gr/: plusminus.h
11aprr/graphic2/: four.cpp
11aprr/third_one/: third_one.pro
11mart/mutex_2/: CMakeLists.txt  main.cpp  newg.cpp  tryfor.cpp
12mart/simafor/: CMakeLists.txt  future.cpp  future_2.cpp  main.cpp
12mart/task/: CMakeLists.txt  main.cpp
14apr/check/: check.cpp
14apr/toolbar/: main.cpp  toolbar.cpp  toolbar.h
14aprr/check/: check.h  main.cpp
14aprr/skeleton/: main.cpp  skeleton.cpp  skeleton.h
14mart/cond.var/: CMakeLists.txt  main.cpp
14mart/operating_system/: CMakeLists.txt  m15.c  m15_2.c  main.c
15mart/atomic/: CMakeLists.txt  main.cpp
16apr/absolute/: absolute.pro
16apr/buttons/: main.cpp
16apr/calculator/: calculator.cpp
16apr/form/: form.cpp  form.h  main.cpp
16apr/nesting/: main.cpp
16apr/review/: main.cpp  review.cpp  review.h
16apr/vertical/: vertical.h
16aprr/absolute/: absolute.cpp
16aprr/buttons/: buttons.cpp  buttons.h
16aprr/calculator/: calculator.h  main.cpp
16aprr/form/: form.pro
16aprr/nesting/: nesting.cpp  nesting.h
16aprr/review/: review.pro
16aprr/vertical/: main.cpp  vertical.cpp
17apr/click/: click.cpp  click.h
17apr/disconnect/: disconnect.cpp  disconnect.pro
17apr/keypress/: main.cpp
17apr/move/: move.cpp  move.pro
19mart/video/: CMakeLists.txt  main.cpp  more.cpp
(+126 files in other folders)
